tests/knowledge/testing-accounts-data/account-data-defaults-merger/aws/us-east-1/ec2-describe-network-acls.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-57b6e636",
                    "NetworkAclId": "acl-a3ee73c8",
                    "SubnetId": "subnet-f9be6092"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-59b6e638",
                    "NetworkAclId": "acl-a3ee73c8",
                    "SubnetId": "subnet-6e81fd22"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-56b6e637",
                    "NetworkAclId": "acl-a3ee73c8",
                    "SubnetId": "subnet-4630243c"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-a3ee73c8",
            "OwnerId": "111111111111",
            "Tags": [],
            "VpcId": "vpc-0e289f65"
        },
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-ffad1b9a",
                    "NetworkAclId": "acl-05452ace084127f8c",
                    "SubnetId": "subnet-07f0ab31e1fab30f6"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-05452ace084127f8c",
            "OwnerId": "111111111111",
            "Tags": [],
            "VpcId": "vpc-0f6ffc4481f8e46af"
        },
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-0978c0fcc5375f177",
                    "NetworkAclId": "acl-017afdbe80a556293",
                    "SubnetId": "subnet-0e6f7341b6f24c9f6"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-017afdbe80a556293",
            "OwnerId": "111111111111",
            "Tags": [
                {
                    "Key": "ScannerTag",
                    "Value": "ScannerValue"
                }
            ],
            "VpcId": "vpc-0bb120e294ef53f94"
        }
    ]
}
