tests/knowledge/testing-accounts-data/account-data-defaults-merger/aws/us-east-1/ec2-describe-security-groups.json
{
    "SecurityGroups": [
        {
            "Description": "default VPC security group",
            "GroupId": "sg-0c9828400b7828fc4",
            "GroupName": "default",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-0c9828400b7828fc4",
                            "UserId": "111111111111"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "111111111111",
            "VpcId": "vpc-0f6ffc4481f8e46af"
        },
        {
            "Description": "default VPC security group",
            "GroupId": "sg-0f5fa3490cfe7cb79",
            "GroupName": "default",
            "IpPermissions": [],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "111111111111",
            "Tags": [
                {
                    "Key": "ScannerTag",
                    "Value": "ScannerValue"
                }
            ],
            "VpcId": "vpc-0bb120e294ef53f94"
        },
        {
            "Description": "no rules sg",
            "GroupId": "sg-0f6f7503b6d1bdbaa",
            "GroupName": "terraform-20210314101653308600000001",
            "IpPermissions": [],
            "IpPermissionsEgress": [],
            "OwnerId": "111111111111",
            "VpcId": "vpc-0f6ffc4481f8e46af"
        },
        {
            "Description": "default VPC security group",
            "GroupId": "sg-d8ea37a6",
            "GroupName": "default",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-d8ea37a6",
                            "UserId": "111111111111"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-d8ea37a6",
                            "UserId": "111111111111"
                        }
                    ]
                }
            ],
            "OwnerId": "111111111111",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "default_sg"
                }
            ],
            "VpcId": "vpc-0e289f65"
        }
    ]
}
