tests/knowledge/testing-accounts-data/account-data-defaults-merger/aws/us-east-1/ec2-describe-vpcs.json
{
    "Vpcs": [
        {
            "CidrBlock": "10.0.0.0/24",
            "CidrBlockAssociationSet": [
                {
                    "AssociationId": "vpc-cidr-assoc-0d365aa5b3058b373",
                    "CidrBlock": "10.0.0.0/24",
                    "CidrBlockState": {
                        "State": "associated"
                    }
                }
            ],
            "DhcpOptionsId": "dopt-8450d8ef",
            "InstanceTenancy": "default",
            "IsDefault": false,
            "OwnerId": "111111111111",
            "State": "available",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "TestVPC"
                }
            ],
            "VpcId": "vpc-0bb120e294ef53f94"
        },
        {
            "CidrBlock": "172.31.0.0/16",
            "CidrBlockAssociationSet": [
                {
                    "AssociationId": "vpc-cidr-assoc-fb0abb90",
                    "CidrBlock": "172.31.0.0/16",
                    "CidrBlockState": {
                        "State": "associated"
                    }
                }
            ],
            "DhcpOptionsId": "dopt-8450d8ef",
            "InstanceTenancy": "default",
            "IsDefault": true,
            "OwnerId": "111111111111",
            "State": "available",
            "Tags": [
                {
                    "Key": "ScannerTag",
                    "Value": "ScannerValue"
                }
            ],
            "VpcId": "vpc-0e289f65"
        },
        {
            "CidrBlock": "172.16.0.0/16",
            "CidrBlockAssociationSet": [
                {
                    "AssociationId": "vpc-cidr-assoc-071580392d814f297",
                    "CidrBlock": "172.16.0.0/16",
                    "CidrBlockState": {
                        "State": "associated"
                    }
                }
            ],
            "DhcpOptionsId": "dopt-8450d8ef",
            "InstanceTenancy": "default",
            "IsDefault": false,
            "OwnerId": "111111111111",
            "State": "available",
            "VpcId": "vpc-0f6ffc4481f8e46af"
        }
    ]
}
